Fix responsive issues on mobile and tablet

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -229,7 +229,8 @@
   }
 
   .career-info-in {
-    gap: 0px;
+    gap: 10px;
+    flex-direction: column;
   }
 
   .career-info h3 {
