--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -21,7 +21,7 @@
   list-style: none;
   column-gap: 40px;
   row-gap: 8px;
-  align-items: end;
+  align-items: center;
 }
 .header ul li {
   margin-left: 0px;
